BSL update, ALPN, SNI, catching Socket timeout/exception in RTL/LTR, new flags